- Removed unused imports and commented code. - Improved code readability and formatting.