@@ -3,10 +3,8 @@ package br.com.meslin;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.FileInputStream;
 import java.io.IOException;
-import org.apache.commons.io.IOUtils;
 import java.util.Set;
 import java.util.HashSet;
-import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 
@@ -31,7 +29,7 @@ public class TurmaJson {
 
         try {
             FileInputStream inputStream = new FileInputStream(filePath);
-            String text = IOUtils.toString(inputStream, "UTF-8");
+            String text = new String(inputStream.readAllBytes(), "UTF-8");
             
             // Read the JSON array directly into a Turma array
             turmas = objectMapper.readValue(text, Turma[].class);
@@ -62,10 +60,9 @@ public class TurmaJson {
 
     /** 
      * Get the class from the class name
-     * @param disciplina_turma class name
-     * @return the class with the given name
-     * @return null if the class is not found
-    */
+     * @param disciplina_turma class name e.g. "inf1304 3WA"
+     * @return the class with the given name, or null if the class is not found
+     */
     public Turma getTurma(String disciplina_turma) {
         String[] parts = disciplina_turma.split(" ");
         String id_disciplina = parts[0];
@@ -80,6 +77,11 @@ public class TurmaJson {
         return null;
     }
 
+    /**
+     * Get the class by group ID
+     * @param groupID group ID
+     * @return the class with the given group ID, or null if the class is not found
+     */
     public Turma getTurma(int groupID) {
         for (Turma turma : this.turma_list) {
             if (turma.group == groupID || turma.group_attending == groupID || turma.group_absent == groupID) {
@@ -91,20 +93,14 @@ public class TurmaJson {
 
     /**
      * Get the group ID from the class name
-     * @param disciplina_turma
-     * @return the group ID
-     * @return -1 if the class is not found
+     * @param disciplina_turma class name
+     * @return the group ID, or -1 if the class is not found
      */
     public int getGroupIDFromTurma(String disciplina_turma) {
         String[] parts = disciplina_turma.split(" ");
         String id_disciplina = parts[0];
         String id_turma = parts[1];
 
-        /* 
-         * 3000 -> INF1304 - 3WA
-         * 3100 -> INF1748 - 3WA
-         * 3101 -> INF1748 - 3WB 
-        */
         for (Turma turma : this.turma_list) {
             if (turma.id_turma.equals(id_turma) && turma.disciplina.equals(id_disciplina)) {
                 return turma.group;
@@ -114,24 +110,23 @@ public class TurmaJson {
         return -1;
     }
 
-    public Set<Integer> getGroupsFromStudentAttendance(String nome_turma, int dayOfWeek, String hour, String location)
-    {
+    /**
+     * Get the groups from student attendance
+     * @param nome_turma class name
+     * @param dayOfWeek day of the week
+     * @param hour hour in HH:mm format
+     * @param location location of the class
+     * @return set of group IDs based on student attendance
+     */
+    public Set<Integer> getGroupsFromStudentAttendance(String nome_turma, int dayOfWeek, String hour, String location) {
         Set<Integer> groups = new HashSet<Integer>();
         Turma turma = getTurma(nome_turma);
         LocalTime currentTime = LocalTime.parse(hour, DateTimeFormatter.ofPattern("HH:mm")).withSecond(0).withNano(0);
 
-        for (SalaHorario salaHorario : turma.salas_horarios) 
-        {
-            // System.out.println("Checking " + salaHorario.sala + " " + salaHorario.horario);
-            if (salaHorario.getDayOfWeek() == dayOfWeek) 
-            {
-                // System.out.println("Day of week matches | Is class time = " + salaHorario.isClassTime(currentTime));
-                if (salaHorario.isClassTime(currentTime)) 
-                {
-                    // System.out.println(turma.disciplina + "is in class");
-                    if (salaHorario.sala.equals(location)) 
-                    {
-                        // System.out.println("Student is in class");
+        for (SalaHorario salaHorario : turma.salas_horarios) {
+            if (salaHorario.getDayOfWeek() == dayOfWeek) {
+                if (salaHorario.isClassTime(currentTime)) {
+                    if (salaHorario.sala.equals(location)) {
                         groups.add(turma.group_attending);
                     } else {
                         groups.add(turma.group_absent);
@@ -143,6 +138,10 @@ public class TurmaJson {
         return groups;
     }
 
+    /**
+     * Get all classes
+     * @return array of all classes
+     */
     public Turma[] getTurmas() {
         return this.turma_list;
     }
